JSON.stringify should call replacer on deleted properties https://bugs.webkit.org/show_bug.cgi?id=208725

Reviewed by Ross Kirsling.

JSTests:

* microbenchmarks/json-stringify-many-objects-to-json.js: Added.
* microbenchmarks/json-stringify-many-objects.js: Added.
* test262/expectations.yaml: Mark 2 test cases as passing.

Source/JavaScriptCore:

This change removes extra `hasProperty` check from `appendNextProperty` as
it does not exist in the spec [1], aligning JSC with V8 and SpiderMonkey.

This patch also replaces 3 usages of `getPropertySlot` with semantically
equivalent (yet more concise) `get` and inlines `toJSONImpl` (this change
is performance-neutral).

[1]: https://tc39.es/ecma262/#sec-serializejsonobject (steps 6, 8.a)

* runtime/JSONObject.cpp:
(JSC::Stringifier::toJSON):
(JSC::Stringifier::Holder::appendNextProperty):
(JSC::Stringifier::toJSONImpl): Deleted.


Canonical link: https://commits.webkit.org/221658@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@258049 268f45cc-cd09-0410-ab3c-d52691b4dbfc